src/objects/Terms_Conditions__c.object
<CustomObject>
    <description>Holds the Terms &amp; Conditions for any use</description>
    <fields>
        <fullName>Active_Date__c</fullName>
        <label>Active Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>T_C_Text__c</fullName>
        <label>T&amp;C Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Portal</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Terms &amp; Conditions</label>
    <nameField>
        <displayFormat>TC-{0}</displayFormat>
        <label>Terms &amp; Conditions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms &amp; Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TC_Expiration_Later_Than_Active</fullName>
        <active>true</active>
        <description>Ensure the expiration date is past the active date</description>
        <errorConditionFormula>Active_Date__c &gt; Expiration_Date__c</errorConditionFormula>
        <errorDisplayField>Expiration_Date__c</errorDisplayField>
        <errorMessage>The Expiration Date must be greater than or equal to the Active Date</errorMessage>
    </validationRules>
</CustomObject>